--- a/src/components/GlobalStyles/GlobalStyles.module.scss
+++ b/src/components/GlobalStyles/GlobalStyles.module.scss
@@ -2,8 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
 :root {
-    --primary: #fe2c55;
+    --primary: rgba(254, 44, 85, 1);
     --black: #000;
+    --white: #fff;
     --text-color: #333;
 
     // Default Layout
