--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -27,6 +27,11 @@
 .title + .icon {
     margin-left: 8px;
 }
+.icon {
+    display: inline-block;
+    width: 20px;
+    text-align: center;
+}
 
 // Button type
 .rounded {
