--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,10 +3,11 @@
     align-items: center;
     justify-content: center;
     min-width: 100px;
+    padding: 9px 16px;
     font-size: 1.6rem;
     font-weight: 700;
-    padding: 9px 16px;
     border-radius: 4px;
+    font-family: 'ProximaNova', sans-serif;
     cursor: pointer;
     background-color: var(--white);
     border: 1px solid transparent;
